# taki-webpydemo

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  dockerfile  justfile  makefile  pyproject.toml  requirements.txt
.github/: CODEOWNERS
data/: graph.json
data/questions/: index.md
deploy/docker/: demoapp.dockerfile  draft.docker-compose.yml  messenger.docker-compose.yml  run.dockerfile
deploy/nginx/: balancer-nginx.conf
docs/: README.md
docs/auth/: sessions.md
docs/development/: codeowners.md  compose.md  install-third-party-deps.md  microwrapper.md  role-base-access-control.md
docs/monorepository/: README.md
docs/research/: README.md
libs/microwrapper/: README.md  pyproject.toml
libs/microwrapper/src/microwrapper/: __init__.py
libs/wsdk/: pyproject.toml
libs/wsdk/src/wsdk/: config.py  decorators.py  random.py  secrets.py  slugify.py
libs/wsdk/src/wsdk/decorators/: __init__.py
libs/wsdk/src/wsdk/events/: __init__.py
libs/wsdk/src/wsdk/exceptions/: utils.py
libs/wsdk/src/wsdk/extension/: __init__.py
libs/wsdk/src/wsdk/mediator/: dispatch_based.py
libs/wsdk/src/wsdk/mixins/: __init__.py
libs/wsdk/src/wsdk/network/: http.py
libs/wsdk/src/wsdk/patterns/: specification.py
libs/wsdk/src/wsdk/validators/: __init__.py
libs/wsdk/src/wsdk/value_object/: __init__.py
libs/wsdk/tests/: mediator_dispatching_test.py  test_draft.py  test_mediator_dispatching.py  test_single_dispatching.py  test_upcast_env.py
libs/wsdk/tests/network/: test_retry.py
scripts/: dotenvgen.py
services/demoapp/: pyproject.toml
services/demoapp/demoapp/: __main__.py
services/demoapp/demoapp/api/health/: handlers.py
services/demoapp/demoapp/cli/: commands.py
services/demoapp/demoapp/config/: app.py  base.py
services/demoapp/demoapp/db/migrations/versions/: 2025-02-22_init_users_da7159495fbf.py
services/demoapp/demoapp/domain/services/: users.py
services/demoapp/demoapp/server/: openapi.py  server.py
services/demoapp/demoapp/server/plugins/: __init__.py
services/demoapp/src/demoapp/: asgi.py
services/demoapp/src/demoapp/db/migrations/: alembic.ini
services/demoapp/src/demoapp/domain/: protocols.py
services/demoapp/src/demoapp/server/: dependencies.py  server.py
services/messenger/: README.md  justfile  pyproject.toml
services/messenger/messenger/: asgi.py  auth.py  config.py  exceptions.py
services/messenger/messenger/cli/: commands.py
services/messenger/messenger/config/: __init__.py  app.py  plugins.py
services/messenger/messenger/database/: models.py
services/messenger/messenger/database/migrations/: alembic.ini
services/messenger/messenger/database/migrations/versions/: 2025-04-22_initial_6eb8d8ed9ce8.py
services/messenger/messenger/database/models/: __init__.py  chat.py  prelude.py  user.py
services/messenger/messenger/domain/: chat.py  entities.py
services/messenger/messenger/domain/accounts/: entities.py  services.py  signals.py
services/messenger/messenger/lib/: logger.py
services/messenger/messenger/lib/database/: __init__.py  hooks.py  metadata.py  sessions.py
services/messenger/messenger/migrations/: 0000_initial.sql
services/messenger/messenger/router/: __init__.py
services/messenger/messenger/router/api/: __init__.py  annotates.py  chat.py  healthcheck.py
services/messenger/messenger/router/ws/: __init__.py
services/messenger/messenger/server/: openapi.py  plugins.py  routers.py  server.py
services/messenger/src/messenger/: config.py
services/messenger/src/messenger/api/: routers.py
services/messenger/src/messenger/domain/: models.py
services/messenger/src/messenger/server/: dependencies.py  plugins.py
services/messenger/test/: test_chat_ws.py
services/messenger/test/database/: conftest.py  test_models.py
services/messenger/test/integration/: conftest.py  test_chat_ws.py
services/messenger/tests/integration/: conftest.py  test_chat_ws.py
services/messenger/tests/polygon/: test_base.py
services/registry/: README.md  pyproject.toml
services/registry/registry/: __main__.py  asgi.py  config.py
services/registry/registry/api/: router.py
services/registry/registry/cli/: commands.py
services/registry/registry/domain/: exceptions.py
services/registry/registry/domain/services/: utils.py
services/registry/registry/server/: openapi.py  router.py  server.py
services/registry/src/registry/: __main__.py  config.py
services/registry/src/registry/domain/services/: events.py  exceptions.py
services/registry/src/registry/server/: openapi.py  server.py
src/app/: __main__.py  asgi.py
src/app/api/: routers.py
src/app/api/health/: handlers.py  routers.py
src/app/cli/: commands.py
src/app/config/: __init__.py  app.py  base.py
src/app/db/: __init__.py  users.py
src/app/db/migrations/: alembic.ini  env.py  (+1 more)
src/app/domain/: protocols.py
src/app/lib/: logger.py
src/app/server/: dependencies.py  openapi.py  routers.py  server.py
src/demoapp/: __main__.py
src/demoapp/cli/: commands.py
src/demoapp/config/: base.py  consts.py
src/demoapp/server/: openapi.py  routers.py  signals.py
src/docs_lib/: __init__.py  bin.py  consts.py  exceptions.py  validators.py
src/docs_lib/repositories/: __init__.py  types.py
src/messenger/: __main__.py  asgi.py  config.py
src/messenger/domain/: models.py
src/messenger/server/: openapi.py  routers.py
src/mws_sdk/: dao.py  outbox.py
src/registry/: GLOBSCOPE.py  app.py  exceptions.py
src/registry/domain/: exceptions.py
src/registry/lib/: validators.py
src/wsdk/: exceptions.py  mediator.py  mixins.py  singleton.py  specification.py
src/wsdk/mediator/: dispatch_based.py
src/wsdk/repository/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py
tests/messenger/: conftest.py
tests/unit/: graph_test.py
tooling/compose/: draft.compose.yml  messenger-dev.compose.yaml
tooling/docker/: demoapp.dockerfile  draft.dockerfile
tooling/scripts/: entrypoint.sh  healtcheck.py
tooling/terraform/: example.tf
(+11 files in other folders)
