[project]
name = "wsdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TakiMoysha", email = "takimoysha@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["uuid6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

