[project]
name = "demoapp"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TakiMoysha", email = "takimoysha@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
path = "demoapp/__about__.py"

[project.scripts]
server_demoapp = "demoapp.__main__:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
