[project]
name = "messenger"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TakiMoysha", email = "takimoysha@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
path = "registry/__about__.py"


[project.scripts]
dev = "messenger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
