[project]
name = "messenger"
description = "Add your description here"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "TakiMoysha", email = "takimoysha@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "litestar[standard,jwt,structlog]>=2.15.2",
    "advanced-alchemy[uuid]>=0.31.0",
    "tabulate>=0.9.0",
    "asyncio>=0.27.0",
    "wsdk",
]

[tool.uv.sources]
wsdk = { workspace = true }

[tool.hatch.version]
path = "messenger/__about__.py"

[project.scripts]
server_messenger = "messenger.__main__:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
