[project]
name = "registry"
description = "Add your description here"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "TakiMoysha", email = "takimoysha@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "litestar[standart]>=2.15.2",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "wsdk",
]
[tool.uv.sources]
wsdk = { path = "../../libs/wsdk", editable = true }

[project.scripts]
registry = "registry.__main__:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.version]
path = "registry/__about__.py"
source = "regex"
# [tool.hatch.dependencies]
# wsdk = { path = "../../libs/wsdk" }
# [tool.hatch.build.targets.wheel]
# only-include = ["wsdk", "registry"]
# [tool.hatch.build.targets.sources]
# wsdk = "libs/wsdk"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = ["-ra", "--ignore", "migrations"]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:aiosql.*",
    "ignore::DeprecationWarning:litestar.constants.*",
    "ignore::DeprecationWarning:litestar.utils.*",
    "ignore::DeprecationWarning:litestar.cli.*",
    "ignore::DeprecationWarning:httpx._client",
]
