[project]
name = "registry"
description = "Add your description here"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "TakiMoysha", email = "takimoysha@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "litestar[standard,jwt,structlog]>=2.15.2",
    "advanced-alchemy[uuid]>=0.31.0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "wsdk",
]
[tool.uv.sources]
wsdk = { workspace = true }

[project.scripts]
server_registry = "registry.__main__:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "registry/__about__.py"
